revamped from security manager to graalvm, removed most example probelms